--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>React App</title>
     <link rel="preconnect" href="https://rsms.me/" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
-    <link rel="icon" type="image/svg+xml" href="/profile/favicon.svg" />
+    <link rel="icon" href="/profile/favicon.ico" />
   </head>
   <body>
     <div id="root"></div>
